--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node ./server/index.js",
     "start-debugger": "node --inspect --debug-brk ./server/index.js",
-    "test": "./node_modules/.bin/mocha --reporter spec"
+    "test": "./node_modules/.bin/mocha test/**/*.spec.js"
   },
   "author": "Chris Natale",
   "license": "ISC",
@@ -27,8 +27,10 @@
   },
   "dependencies": {
     "bunyan": "^1.8.10",
+    "chai-as-promised": "^6.0.0",
     "config": "^1.25.1",
     "knex": "^0.12.9",
+    "lodash": "^4.17.4",
     "logrotate-stream": "^0.2.5",
     "mysql": "^2.13.0",
     "mysql2": "^1.2.0",
