--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node ./server/index.js",
     "start-debugger": "node --inspect --debug-brk ./server/index.js",
     "test": "./node_modules/.bin/mocha test/**/*.spec.js",
-    "cover": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha test/**/*.spec.js"
+    "test-cover": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha test/**/*.spec.js",
+    "report": "./node_modules/.bin/istanbul report --root ./coverage html"
   },
   "author": "Chris Natale",
   "license": "ISC",
