--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "dependencies": {
     "bunyan": "^1.8.10",
-    "chai-as-promised": "^6.0.0",
+    "chai-as-promised": "^7.1.1",
     "config": "^1.25.1",
     "istanbul": "^0.4.5",
     "knex": "^0.12.9",
@@ -37,6 +37,7 @@
     "logrotate-stream": "^0.2.5",
     "mysql": "^2.13.0",
     "mysql2": "^1.2.0",
+    "seedrandom": "^2.4.3",
     "sqlformatter": "^0.1.0",
     "when": "^3.7.8"
   }
