--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start-debugger": "node --inspect --debug-brk ./server/index.js",
     "test": "./node_modules/.bin/mocha test/**/*.spec.js",
     "test-cover": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha test/**/*.spec.js",
-    "report": "./node_modules/.bin/istanbul report --root ./coverage html"
+    "report": "./node_modules/.bin/istanbul report --root ./coverage html",
+    "clean-db": "node ./scripts/clean-db.js"
   },
   "author": "Chris Natale",
   "license": "ISC",
@@ -33,6 +34,7 @@
     "config": "^1.25.1",
     "istanbul": "^0.4.5",
     "knex": "^0.12.9",
+    "knex-cleaner": "^1.1.3",
     "lodash": "^4.17.4",
     "logrotate-stream": "^0.2.5",
     "mysql": "^2.13.0",
