--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mocha": "^3.2.0"
   },
   "dependencies": {
+    "body-parser": "^1.18.2",
     "bunyan": "^1.8.10",
     "chai-as-promised": "^7.1.1",
     "config": "^1.25.1",
