--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
     "eslint": "^3.19.0",
     "eslint-config-google": "^0.7.1",
     "eslint-config-standard": "^7.1.0",
@@ -26,7 +27,10 @@
     "gulp-eslint": "^3.0.1",
     "gulp-mocha": "^4.1.0",
     "gulp-nodemon": "^2.2.1",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "qs": "^6.5.1",
+    "supertest": "^3.0.0",
+    "supertest-as-promised": "^4.0.2"
   },
   "dependencies": {
     "body-parser": "^1.18.2",
