--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "knex-cleaner": "^1.1.3",
     "lodash": "^4.17.4",
     "logrotate-stream": "^0.2.5",
+    "moment": "^2.19.3",
     "mysql": "^2.13.0",
     "mysql2": "^1.2.0",
     "seedrandom": "^2.4.3",
