--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "config": "^1.25.1",
     "express": "^4.16.2",
     "istanbul": "^0.4.5",
+    "joi": "^13.0.2",
     "knex": "^0.12.9",
     "knex-cleaner": "^1.1.3",
     "lodash": "^4.17.4",
