--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
     "config": "^1.25.1",
     "express": "^4.16.2",
     "istanbul": "^0.4.5",
-    "joi": "^13.0.2",
-    "knex": "^0.12.9",
-    "knex-cleaner": "^1.1.3",
+    "joi": "~13.0.2",
+    "knex": "0.14.4",
+    "knex-cleaner": "^1.1.4",
     "lodash": "^4.17.4",
     "logrotate-stream": "^0.2.5",
     "moment": "^2.19.3",
