--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server/index.js",
   "scripts": {
+    "end-to-end-test": "node ./test/end_to_end/test.js",
     "start": "node ./server/main.js",
     "start-debugger": "node --inspect --debug-brk ./server/main.js",
     "test": "NODE_ENV=test ./node_modules/.bin/mocha test/**/*.spec.js",
@@ -31,7 +32,9 @@
     "mocha": "^3.2.0",
     "qs": "^6.5.1",
     "supertest": "^3.0.0",
-    "supertest-as-promised": "^4.0.2"
+    "supertest-as-promised": "^4.0.2",
+    "wdio-mocha-framework": "^0.5.12",
+    "webdriverio": "^4.11.0"
   },
   "dependencies": {
     "body-parser": "^1.18.2",
@@ -49,6 +52,7 @@
     "mysql": "^2.13.0",
     "mysql2": "^1.2.0",
     "seedrandom": "^2.4.3",
+    "selenium-standalone": "^6.12.0",
     "sqlformatter": "^0.1.0",
     "when": "^3.7.8"
   }
