--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "knex-cleaner": "1.1.3",
     "lodash": "^4.17.4",
     "logrotate-stream": "^0.2.5",
+    "minimist": "^1.2.0",
     "moment": "^2.19.3",
     "mysql": "^2.13.0",
     "mysql2": "^1.2.0",
