--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "selenium-nix-start": "./node_modules/.bin/selenium-standalone install && brew services start chromedriver && ./node_modules/.bin/selenium-standalone start",
     "end-to-end-test": "node ./automated_browser_scripts/test.js",
     "start": "node ./server/main.js",
+    "start-and-trial": "node ./server/main.js & node ./automated_browser_scripts/test.js",
     "start-debugger": "node --inspect --debug-brk ./server/main.js",
     "test": "NODE_ENV=test ./node_modules/.bin/mocha test/**/*.spec.js",
     "test-cover": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha test/**/*.spec.js",
