--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "moment": "^2.19.3",
     "mysql": "^2.13.0",
     "mysql2": "^1.2.0",
+    "puppeteer": "~1.7.0",
     "seedrandom": "^2.4.3",
     "selenium-standalone": "^6.12.0",
     "sqlformatter": "^0.1.0",
